# simple_http_server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  abnf.c  abnf.h  build.sh  clean.sh  http_common_field_lines.c  http_common_field_lines.h  http_field_line.c  http_field_line.h  http_message.c  http_message.h  http_normalize_field_line.c  http_normalize_field_line.h  http_request.c  http_request.h  http_request_context.c  http_request_context.h  http_request_handler.c  http_request_handler.h  http_request_queue.c  http_request_queue.h  http_resources.c  http_resources.h  http_response.c  http_response.h  http_routing.c  http_routing.h  log.h  reader.c  reader.h  run.sh  simple_http_server.c  status.h  stream_reader.c  stream_reader.h  tcp_connection.c  tcp_connection.h  (+4 more)
doc/: syntax_of.config  syntax_of.resource
tests/: CMakeLists.txt  test_http_message.c  test_reader.c  test_stream_reader.c
www/: .config  404.html  abc.resource  chunked.html  ghi.resource  index.html  mno.html  nggyu.html
